# minisaml

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  mypy.ini  pyproject.toml
.circleci/: config.yml
.github/workflows/: release.yml  workflow.yml
docs/: conf.py  how-to.rst  index.rst  reference.rst  saml-intro.rst  tutorial.rst
examples/minisaml-flask/: minisaml_flask.py  pyproject.toml
examples/minisaml-flask-sp/: README.md  minisaml_flask_sp.py  pyproject.toml
src/minisaml/: errors.py  request.py  response.py
src/minisaml/internal/: constants.py  namespaces.py  saml.py  utils.py
tests/: azure_ad_unsigned.xml  conftest.py  response.xml.b64  test_request.py  test_response.py
tests/data/: azure_ad_unsigned.xml.b64  cert.pem  cert2.pem  response.xml.b64
tests/data/attrs/: aad1.xml  aad2.xml  format-extra-attrs.xml  format.xml  multi-value.xml  multi.xml  no-value.xml  single.xml
