[tool.poetry]
name = "minisaml"
version = "24.6"
description = "Minimal SAML2 client"
authors = ["Jonas Obrist <jonas.obrist@hennge.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/HENNGE/minisaml"
repository = "https://github.com/HENNGE/minisaml"
documentation = "https://minisaml.readthedocs.io"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.8"
minisignxml = ">=24.6"
lxml = "^5.0"
yarl = ">=1.4.2"
# poetry doesn't support extras in dev-dependencies, so these must be here as optional dependencies
Sphinx = { version = "^5", optional = true }
sphinxcontrib-mermaid = { version = "^0.7.0", optional = true }
furo = { version = "^2022.6.21", optional = true }

[tool.poetry.extras]
docs = ["sphinx", "sphinxcontrib-mermaid", "furo"]

[tool.poetry.dev-dependencies]
pytest = ">=5.2"
isort = "5.10.1"
black = "^22"
cryptography = "^37"
cffi = "^1.15"
flask = ">=1.1.2"
mypy = ">=0.961"
pytest-asyncio = "^0.18.3"
time-machine = "^2.7.1"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true
files = "src/**/*.py,tests/*.py"

[[tool.mypy.overrides]]
module = "defusedxml.lxml"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "lxml.etree"
ignore_missing_imports = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
